--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,4 +1,4 @@
-PORT=4000
-API_BASE_URL=https://api.myproject.com
+PORT=3000
+API_BASE_URL=https://localhost
 NODE_ENV=development
 LOG_DIRECTORY=logs
