--- a/api/.env.sample
+++ b/api/.env.sample
@@ -1,4 +1,5 @@
 PORT=3000
-API_BASE_URL=https://localhost
+API_BASE_URL=http://localhost
+ALLOWED_CLIENT_URL=http://localhost:5173
 NODE_ENV=development
 LOG_DIRECTORY=logs
