--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "API for Beer Ecommerce Challenge",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
